--- a/src/Pages/Destination/destination.module.css
+++ b/src/Pages/Destination/destination.module.css
@@ -35,6 +35,7 @@
 
 .titleSpan {
     color: white;
+    font-weight: lighter;
 }
 
 .planetImg {
@@ -70,6 +71,20 @@
     
 }
 
+.activeButtom {
+    background: none;
+    color: white;
+    font-size: 16px;
+    font-family: 'Barlow Condensed';
+    border: none;
+    border-bottom: 3px solid white;
+}
+
+.ulButton:hover {
+    border-bottom: 3px solid rgba(255, 255, 255, 0.426);
+    
+}
+
 .planetName {
     font-size: 100px;
     color: white;
@@ -83,7 +98,7 @@
     width: 50%;
 }
 
-.ulBottom {
+.ulDescription {
     display: flex;
     list-style: none;
     gap: 5vh;
@@ -101,13 +116,15 @@
 }
 
 .liTravel {
+    display: flex;
+    flex-direction: column;
     color: white;
     font-size: 14px;
     font-family: 'Barlow Condensed';
-    width: 14%;
+    width: 18%;
 }
 
-.spanBottom {
+.spanDescription {
     font-size: 28px;
     font-family: 'Bellefair';
     
