fixing styles WIP

--- a/src/Pages/Crew/crew.module.css
+++ b/src/Pages/Crew/crew.module.css
@@ -9,6 +9,9 @@
     display: flex;
     /* align-items: center; */
     margin-top: 10vh;
+    position: fixed;
+    bottom: 0;
+    height: 712px;
     
 }
 
