--- a/src/Pages/Destination/destination.module.css
+++ b/src/Pages/Destination/destination.module.css
@@ -14,16 +14,16 @@
 
 /* Left side */
 .leftContainer {
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
+    margin-right: 5vw;
+    width: 30vw;
+    
+    
 }
 
 .titleContainer {
     display: flex;
     text-align: center;
     align-items: center;
-    width: 50%;
     flex-direction: column;
 }
 
@@ -48,7 +48,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 50%;
+    width: 445px;
+    height: 472px;
 }
 
 
@@ -56,8 +57,8 @@
     list-style: none;
     display: flex;
     gap: 10px;
-    height: min-content;
     padding-left: 0px;
+    margin-top: 0px;
 }
 
 .ulButton {
@@ -93,7 +94,8 @@
 
 .pDescription {
     color: white;
-    width: 50%;
+    height: 72px;
+    width: 445px;
 }
 
 .ulDescription {
@@ -101,6 +103,7 @@
     list-style: none;
     gap: 5vh;
     padding-left: 0px;
+        
     
 }
 
@@ -110,6 +113,7 @@
     font-family: 'Barlow Condensed', sans-serif;
     display: flex;
     flex-direction: column;
+    width: 50%;
     
 }
 
@@ -119,7 +123,7 @@
     color: white;
     font-size: 14px;
     font-family: 'Barlow Condensed', sans-serif;
-    width: 18%;
+    width: 50%;
 }
 
 .spanDescription {
