--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
 }
-.background-home {
+.backgroundHome {
     background-image: url("/src/assets/home/background-home-desktop.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,7 +24,7 @@ body {
 
 }
 
-.heading-5 {
+.heading5 {
     font-family: 'Barlow Condensed';
     color: #D0D6F9;
     font-size: 28px;
@@ -32,7 +32,7 @@ body {
     
 }
 
-.heading-1 {
+.heading1 {
     font-family: 'Barlow Condensed';
     color: #FFFFFF;
     font-size: 150px;
@@ -41,7 +41,7 @@ body {
 
 }
 
-.body-text {
+.bodyText {
     align-content: flex-start;
     align-items: center;
     justify-content: center;
@@ -59,5 +59,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 8vh;
+    /* border: 60px solid transparent; */
+}
+
+.exploreCircle:hover {
+    border-color: grey;
+    /* transform: scaleX(200%) */
 }
