--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    max-height: 100vh;
 }
 .backgroundHome {
     background-image: url("/src/assets/home/background-home-desktop.jpg");
@@ -25,7 +26,7 @@ body {
 }
 
 .heading5 {
-    font-family: 'Barlow Condensed';
+    font-family: 'Barlow Condensed', sans-serif;
     color: #D0D6F9;
     font-size: 28px;
     font-weight: lighter;
@@ -33,7 +34,7 @@ body {
 }
 
 .heading1 {
-    font-family: 'Barlow Condensed';
+    font-family: 'Bellefair', serif;
     color: #FFFFFF;
     font-size: 150px;
     font-weight: lighter;
@@ -46,6 +47,10 @@ body {
     align-items: center;
     justify-content: center;
     color: #D0D6F9;
+    width: 450px;
+    height: 100px;
+    line-height: 1.5;
+    
     
 }
 
@@ -59,10 +64,70 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 60px solid transparent; */
+    border: 60px solid transparent;
+    position: relative;
 }
 
 .exploreCircle:hover {
     border-color: grey;
-    /* transform: scaleX(200%) */
+    
+}
+
+/* Responsive  */
+
+@media only screen and (max-width: 1024px) {
+    .backgroundHome {
+        background-image: url("/src/assets/home/background-home-tablet.jpg");
+    }
+
+    .homeContainer {
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+
+    .cardContainer {
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+
+    .heading1 {
+        font-size: 80px;
+    }
+
+    .exploreCircle {
+        width: 200px;
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    body {
+        margin: 0;
+        padding: 0;
+        max-height: max-content;
+    }
+
+    .backgroundHome {
+        background-image: url("/src/assets/home/background-home-mobile.jpg");
+        /* background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; */
+        height: 900px;
+       
+    }
+
+    .heading1 {
+        font-size: 60px;
+    }
+
+    .exploreCircle {
+        width: 150px;
+        height: 150px;
+    }
 }
