--- a/src/Pages/Destination/destination.module.css
+++ b/src/Pages/Destination/destination.module.css
@@ -59,7 +59,7 @@
 
 .ulButton {
   background: none;
-  color: white;
+  color: #d0d6f9;
   font-size: 16px;
   font-family: "Barlow Condensed", sans-serif;
   border: none;
@@ -67,7 +67,7 @@
 
 .activeButtom {
   background: none;
-  color: white;
+  color: #d0d6f9;
   font-size: 16px;
   font-family: "Barlow Condensed", sans-serif;
   border: none;
@@ -84,10 +84,11 @@
   font-family: "Bellefair", serif;
   font-weight: lighter;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .pDescription {
-  color: white;
+  color: #d0d6f9;
   height: 72px;
   width: 445px;
 }
@@ -130,41 +131,69 @@
     background-image: url("/src/assets/destination/background-destination-tablet.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 120vh;
+    background-position: center;
+    height: 100vh;
   }
 
   .fullContainer {
     display: flex;
     flex-direction: column;
-    margin-top: 2vh;
+    margin-top: 5vh;
   }
 
   .leftContainer {
     display: flex;
     flex-direction: column;
+    margin-bottom: 5vh;
   }
 
   .rightContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
   }
 
   .title {
+    font-size: 26px;
+    font-family: "Barlow Condensed", sans-serif;
     margin-right: 400px;
     width: 50vw;
   }
 
+  .titleSpan {
+    margin-left: 10px;
+  }
+
+  .ulNav {
+    width: 285px;
+    height: 34px;
+  }
+
+  .ulButton {
+    font-size: 20px;
+  }
+
+  .activeButtom {
+    font-size: 20px;
+  }
+
   .planetName {
+    font-size: 80px;
     margin: 0;
   }
 
+  .planetImg {
+    width: 300px;
+    height: 300px;
+  }
+
   .liTravel {
-    width: 20vw;
+    width: 25vw;
   }
 
   .liDistance {
-    width: 20vw;
+    width: 25vw;
   }
 }
 
