--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -7,6 +7,7 @@ body {
     background-image: url("/src/assets/home/background-home-desktop.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 100vh;
 }
 
@@ -75,6 +76,7 @@ body {
 
 /* Responsive  */
 
+/* Tablets  */
 @media only screen and (max-width: 1024px) {
     .backgroundHome {
         background-image: url("/src/assets/home/background-home-tablet.jpg");
@@ -106,28 +108,38 @@ body {
     }
 }
 
+/* Phones  */
 @media only screen and (max-width: 480px) {
-    body {
-        margin: 0;
-        padding: 0;
-        max-height: max-content;
-    }
-
     .backgroundHome {
         background-image: url("/src/assets/home/background-home-mobile.jpg");
-        /* background-repeat: no-repeat;
+        background-repeat: no-repeat;
         background-size: cover;
-        background-position: center; */
-        height: 900px;
+        background-position: center;
+        height: 100vh;
        
     }
 
+    .cardContainer {
+        width: 327px;
+        height: 276px;
+        margin-bottom: 5vh;
+    }
+
+    .heading5 {
+        font-size: 15px;
+    }
+
     .heading1 {
-        font-size: 60px;
+        font-size: 70px;
+    }
+
+    .bodyText {
+        width: fit-content;
     }
 
     .exploreCircle {
-        width: 150px;
-        height: 150px;
+        width: 75px;
+        height: 75px;
+        font-size: 25px;
     }
 }
